httpd-example_svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: httpd-example
      app.openshift.io/runtime: apache
    name: httpd-example
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: httpd-example
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
