route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd-example
    app.kubernetes.io/instance: test
    app.openshift.io/runtime: apache
  name: http-route
  namespace: test-rhsso
spec:
  host: http-route-test-rhsso.apps.mtlcaas.ent.cgi.com
  port:
    targetPort: web
  tls:
    termination: edge
  to:
    kind: Service
    name: httpd-example
    weight: 100
  wildcardPolicy: None
